--- a/form/index.html
+++ b/form/index.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оценка пользовательского опыта / предложения</title>
+    <meta http-equiv="refresh" content="0; url=https://forms.yandex.ru/u/65a6db92f47e731be7612dad/">
 </head>
 <body>
-    <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script>
-    <iframe src="https://forms.yandex.ru/u/65a6db92f47e731be7612dad/?iframe=1" frameborder="0" name="ya-form-65a6db92f47e731be7612dad"  style="width: 100%; height: 100%; top: 0px; left: 0px; bottom: 0px; right: 0px; position: fixed;"></iframe>
+Перенаправление на форму...
 </body>
 </html>
